resources/04_ingress/service_apache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  labels:
    app: apache-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-apache # has to match .spec.template.metadata.labels.app
  template:
    metadata:
      labels:
        app: my-apache
    spec:
      containers:
      - name: apache
        image: httpd:2.4.59
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  type: ClusterIP
  selector:
    app: my-apache # has to match .spec.template.metadata.labels.app on kind: Deployment
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
